--- a/index.html
+++ b/index.html
@@ -8,74 +8,86 @@
     <style>
         .hidden { display: none !important; }
         #loading-overlay { transition: opacity 0.5s ease; }
+        .zeus-border { border: 1px solid #eab308; box-shadow: 0 0 15px rgba(234, 179, 8, 0.2); }
     </style>
 </head>
-<body class="bg-black text-white">
+<body class="bg-black text-white overflow-x-hidden">
 
     <div id="loading-overlay" class="fixed inset-0 z-[100] flex items-center justify-center bg-black">
         <div class="text-center">
-            <div class="text-yellow-500 text-2xl animate-pulse font-bold tracking-widest">
+            <div class="text-yellow-500 text-2xl animate-pulse font-bold tracking-widest italic">
                 ⚡ CONNECTING TO OLYMPUS...
             </div>
         </div>
     </div>
 
-    <header class="p-4 border-b border-gray-800 flex justify-between items-center">
-        <h1 class="text-xl font-bold text-yellow-500">OLYMPUS</h1>
-        <div>
-            <button id="header-auth-btn" onclick="toggleLoginModal(true)" class="bg-yellow-500 text-black px-4 py-2 rounded font-bold">LOGIN</button>
-            <button id="account-btn" onclick="toggleAccountModal(true)" class="hidden bg-gray-800 text-white px-4 py-2 rounded font-bold uppercase tracking-widest text-xs">Account</button>
+    <header class="p-4 border-b border-gray-800 flex justify-between items-center bg-black/50 backdrop-blur-md sticky top-0 z-40">
+        <h1 class="text-xl font-black text-yellow-500 tracking-tighter">OLYMPUS</h1>
+        <div class="flex gap-4">
+            <button id="header-auth-btn" onclick="toggleLoginModal(true)" class="bg-yellow-500 text-black px-4 py-1 rounded font-bold text-sm">LOGIN</button>
+            <button id="account-btn" onclick="toggleAccountModal(true)" class="hidden border border-gray-600 px-4 py-1 rounded font-bold text-sm uppercase">Account</button>
         </div>
     </header>
 
-    <main id="main-content" class="hidden p-6">
+    <main id="main-content" class="hidden p-6 max-w-4xl mx-auto">
         
-        <div id="mortal-timer-container" class="hidden mb-6 border border-yellow-500 bg-yellow-500/10 p-4 rounded flex justify-between items-center">
-            <div class="text-left">
-                <p class="text-[10px] uppercase text-yellow-500 font-bold">Mortal Vision Remaining</p>
-                <p id="zeus-timer" class="text-2xl font-mono font-black">10:00</p>
+        <div id="mortal-timer-container" class="hidden mb-8 zeus-border bg-yellow-500/5 p-4 rounded-xl flex justify-between items-center">
+            <div>
+                <p class="text-[10px] uppercase text-yellow-500 font-bold tracking-widest">Mortal Vision Remaining</p>
+                <p id="zeus-timer" class="text-3xl font-mono font-black">10:00</p>
             </div>
-            <div class="text-right">
-                <p class="text-[10px] text-gray-400 uppercase mb-1">Status: Restricted</p>
-                <button onclick="document.getElementById('btn-upgrade-pro').click()" class="text-xs bg-yellow-500 text-black px-2 py-1 rounded font-bold">ASCEND</button>
-            </div>
+            <button onclick="document.getElementById('btn-upgrade-pro').click()" class="bg-yellow-500 text-black px-6 py-2 rounded-full font-black text-xs hover:bg-yellow-400 transition-all">
+                ASCEND TO PRO
+            </button>
         </div>
 
-        <div class="text-center">
-            <h2 class="text-3xl mb-4 font-black italic italic uppercase">The Grid is Active</h2>
-            <p class="text-gray-400 mb-8">You are currently viewing live divine data.</p>
+        <div class="text-center py-10">
+            <h2 class="text-5xl font-black italic uppercase mb-4 tracking-tighter">The Grid</h2>
+            <p class="text-gray-400 max-w-md mx-auto mb-10">You are now witnessing live divine data. Command the relics below.</p>
             
-            <button id="btn-upgrade-pro" class="bg-yellow-500 text-black px-8 py-4 rounded-full font-black text-xl hover:scale-105 transition-transform">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-10 text-left">
+                <div class="p-4 border border-gray-800 rounded">
+                    <h3 class="text-yellow-500 font-bold mb-1">Live Grid</h3>
+                    <p class="text-xs text-gray-500">Real-time athlete tracking.</p>
+                </div>
+                <div class="p-4 border border-gray-800 rounded">
+                    <h3 class="text-yellow-500 font-bold mb-1">Locker</h3>
+                    <p class="text-xs text-gray-500">Your eternal media vault.</p>
+                </div>
+                <div class="p-4 border border-gray-800 rounded">
+                    <h3 class="text-yellow-500 font-bold mb-1">Oracle</h3>
+                    <p class="text-xs text-gray-500">Advanced win-probability.</p>
+                </div>
+            </div>
+
+            <button id="btn-upgrade-pro" class="bg-yellow-500 text-black px-10 py-4 rounded-full font-black text-xl hover:scale-105 transition-all shadow-lg shadow-yellow-500/20">
                 UPGRADE TO PRO
             </button>
         </div>
     </main>
 
-    <div id="paywall-content" class="p-20 text-center">
-        <h2 class="text-4xl font-black mb-4">ACCESS DENIED</h2>
-        <p class="text-gray-500 mb-6">The clouds of Olympus have closed. Log in to clear the mist.</p>
-        <button onclick="toggleLoginModal(true)" class="border border-yellow-500 text-yellow-500 px-6 py-2 rounded">Enter the Gates</button>
+    <div id="paywall-content" class="hidden p-20 text-center">
+        <h2 class="text-5xl font-black mb-4 italic">GATES CLOSED</h2>
+        <p class="text-gray-500 mb-8 max-w-sm mx-auto">The mists of Olympus have descended. Only PRO members or active mortals may enter.</p>
+        <button onclick="toggleLoginModal(true)" class="bg-white text-black px-8 py-3 rounded-full font-bold">Log In to Return</button>
     </div>
 
-    <div id="login-modal" class="hidden fixed inset-0 bg-black/90 flex items-center justify-center z-50">
-        <div class="bg-gray-900 p-8 rounded-lg border border-yellow-500 w-80">
-            <h2 class="text-yellow-500 font-bold mb-4 uppercase">Identity Check</h2>
-            <input type="email" id="login-email" placeholder="Email" class="w-full p-2 mb-2 bg-black border border-gray-700 text-white rounded" autocomplete="username">
-            <input type="password" id="login-password" placeholder="Password" class="w-full p-2 mb-4 bg-black border border-gray-700 text-white rounded" autocomplete="current-password">
-            <button onclick="logIn()" class="w-full bg-yellow-500 text-black py-2 rounded font-bold">LOG IN</button>
-            <button onclick="toggleLoginModal(false)" class="w-full text-gray-500 mt-2 text-sm">Cancel</button>
+    <div id="login-modal" class="hidden fixed inset-0 bg-black/95 flex items-center justify-center z-50 p-4">
+        <div class="bg-gray-900 p-8 rounded-2xl border border-yellow-500 w-full max-w-sm">
+            <h2 class="text-2xl font-black text-yellow-500 mb-6 uppercase italic">Identify Yourself</h2>
+            <input type="email" id="login-email" placeholder="Email" class="w-full p-3 mb-3 bg-black border border-gray-800 rounded-lg text-white outline-none focus:border-yellow-500" autocomplete="username">
+            <input type="password" id="login-password" placeholder="Password" class="w-full p-3 mb-6 bg-black border border-gray-800 rounded-lg text-white outline-none focus:border-yellow-500" autocomplete="current-password">
+            <button onclick="logIn()" class="w-full bg-yellow-500 text-black py-3 rounded-lg font-black uppercase tracking-widest">Enter Gates</button>
+            <button onclick="toggleLoginModal(false)" class="w-full text-gray-500 mt-4 text-xs uppercase">Stay in Shadows</button>
         </div>
     </div>
 
-    <div id="account-modal" class="hidden fixed inset-0 bg-black/90 flex items-center justify-center z-50">
-        <div class="bg-gray-900 p-8 rounded-lg border border-gray-700 w-80 text-center">
-            <h2 class="text-xl font-bold mb-2">Warrior Profile</h2>
-            <div class="py-4 border-y border-gray-800 my-4">
-                <p class="text-xs text-gray-500 uppercase">Current Tier</p>
-                <p id="account-premium-status" class="text-yellow-500 font-black text-lg">MORTAL</p>
-            </div>
-            <button onclick="logOut()" class="w-full bg-red-900/50 text-red-500 border border-red-900 py-2 rounded font-bold mb-4">LOG OUT</button>
-            <button onclick="toggleAccountModal(false)" class="text-gray-500 text-sm">Return to Grid</button>
+    <div id="account-modal" class="hidden fixed inset-0 bg-black/95 flex items-center justify-center z-50 p-4">
+        <div class="bg-gray-900 p-8 rounded-2xl border border-gray-700 w-full max-w-sm text-center">
+            <p class="text-xs text-gray-500 uppercase tracking-widest mb-1">Current Status</p>
+            <h2 id="account-premium-status" class="text-3xl font-black text-yellow-500 mb-8 italic uppercase italic">Mortal</h2>
+            <button onclick="logOut()" class="w-full bg-red-600/20 text-red-500 border border-red-600 py-3 rounded-lg font-bold">LOG OUT</button>
+            <button onclick="toggleAccountModal(false)" class="mt-4 text-gray-500 text-xs uppercase">Close</button>
         </div>
     </div>
 
